Fix overlapping DrinkCard divs

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 .drinks-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: 18.75rem;
+  /* grid-auto-rows: 18.75rem; */
 }
 
 .drink-card {
